[package]
name = "sourcify"
version = "0.0.3"
edition = "2021"
description = "A lightweight wrapper for Sourcify and 4byte APIs for fetching Ethereum smart contract source code and signatures"
license = "LGPL-3.0"
repository = "https://github.com/v3xlabs/crate-sourcify"
readme = "README.md"
keywords = ["ethereum", "sourcify", "solidity", "abi", "4byte"]
categories = ["api-bindings", "web-programming::http-client"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
